# ps-lite

./: .clang-format  .gitignore  .travis.yml  BUILD  CMakeLists.txt  Makefile  README.md  README_CN.md  WORKSPACE  efa.md  env.sh  test.sh  test_stress.sh
.github/workflows/: main.yml
bazel/: tensorflow.bzl  workspace0.bzl  workspace1.bzl  workspace2.bzl  workspace3.bzl
cmake/: ProtoBuf.cmake
cmake/Modules/: FindProtobuf.cmake  FindZMQ.cmake
doc/: Doxyfile  Makefile  README.md  conf.py  gendoc.sh  how_to.md  index.md  index.rst  ps-worker.rst  setup.sh
docs/: api.md  conf.py  env.md  history.md  how_to.md  index.md  overview.md  sphinx_util.py
example/: BUILD  lz4_frameCompress.c  zlib_example.cpp
guide/: README.md  example_a.cc  example_b.cc  example_c.cc  example_d.cc  example_e.cc  local.sh  my_handle.h  network_perf.cc  ps_guide.mk
include/dmlc/: DIME.h  base.h  logging.h
include/ps/: README.md  base.h  kv_app.h  ps.h  range.h  sarray.h  simple_app.h  srmem.h
include/ps/internal/: allocator.h  assign_op.h  bfc_allocator.h  customer.h  env.h  message.h  meta_message.pb.h  meta_message.proto  node.pb.h  node.proto  parallel_kv_match.h  parallel_sort.h  postoffice.h  spsc_queue.h  threadsafe_pqueue.h  threadsafe_queue.h  utils.h  van.h
make/: README.md  config.mk  deps.mk  install_deps.sh  install_third.sh  ps.mk
make/travis/: travis_script.sh
src/: Helpers.h  Optimizers.h  PHUB.h  PHubAllocator.h  README.md  Verbs.hpp  bfc_allocator.cc  consts.h  customer.cc  fabric_rma_van.h  fabric_transport.h  fabric_utils.h  fabric_van.h  ibverbs_van.h  infiniband_van.h  lf_fabric_van.h  meta.h  meta.proto  meta_pb2.py  monitor.h  multi_van.h  network_utils.h  p3_van.h  postoffice.cc  ps-inl.h  ps.h  ps_main.cc  pshub_van.h  rdma_common.h  rdma_transport.h  rdma_utils.h  rdma_van.h  resender.h  server_handle.h  ucx_van.h  van.cc  van_common.h  zmq_van.h
src/base/: assign_op.h  auc.h  barrier.h  base.h  bitmap.h  blob.h  block_bloom_filter.h  bloom_filter.h  common.h  countmin.h  crc32c.cc  crc32c.h  dir.h  evaluation.h  file.cc  file.h  hdfs.h  integral_types.h  local_machine.h  localizer.h  macros.h  parallel_ordered_match.h  parallel_sort.h  producer_consumer.h  range.h  recordio.cc  recordio.h  resource_usage.h  shared_array.h  shared_array_inl.h  sketch.h  split.h  strtonum.h  thread_pool.cc  thread_pool.h  threadpool.cc  threadpool.h  threadsafe_limited_queue.h  threadsafe_queue.h
src/filter/: add_noise.h  compressing.h  delta_key.h  filter.cc  filter.h  fixing_float.h  frequency_filter.h  key_caching.h  sparse_filter.h  truncate_float.h
src/kv/: kv_cache.h  kv_store.h  kv_store_sparse.h  kv_store_sparse_dynamic.h  kv_store_sparse_st.h
src/parameter/: README.org  kv_layer.h  kv_map.h  kv_vector.h  parameter.cc  parameter.h
src/proto/: assign_op.proto  data.proto  filter.proto  heartbeat.proto  node.proto  param.proto  range.proto  task.proto
src/ps/: app.h  base.h  blob.h  monitor.h  node_info.h  ps-inl.h  scheduler.h  server.h  shared_array.h  worker.h
src/system/: assigner.cc  assigner.h  customer.h  dashboard.cc  dashboard.h  env.cc  env.h  executor.cc  executor.h  heartbeat_info.cc  heartbeat_info.h  manager.cc  manager.h  message.cc  message.h  monitor.h  network_usage.h  node_assigner.h  postoffice.cc  postoffice.h  ps-inl.h  remote_node.cc  remote_node.h  van.cc  van.h
src/windows/: unistd.h
tensorflow/: tensorflow.bzl  workspace0.bzl  workspace1.bzl  workspace2.bzl  workspace3.bzl
tests/: CMakeLists.txt  README.md  lint.py  local.sh  local_multi_workers.sh  repeat.sh  run_benchmark.sh  run_tests.sh  test.mk  test.sh  test_benchmark.cc  test_benchmark_stress.cc  test_connection.cc  test_ipc_benchmark.cc  test_kv_app.cc  test_kv_app_benchmark.cc  test_kv_app_ipc_benchmark.cc  test_kv_app_multi_servers.cc  test_kv_app_multi_workers.cc  test_simple_app.cc  test_sparse_benchmark.cc  ucx_multi_node.sh
tests/travis/: travis_before_cache.sh  travis_script.sh  travis_setup_env.sh
tools/: check_diff.sh  format_code.sh
tracker/: README.md  dmlc_local.py  dmlc_mpi.py  dmlc_ssh.py  tracker.py
