add_executable(connection_test test_connection.cc)
target_link_libraries(connection_test pslite)

add_executable(simple_app_test test_simple_app.cc)
target_link_libraries(simple_app_test pslite)

add_executable(kv_app_test test_kv_app.cc)
target_link_libraries(kv_app_test pslite)

add_executable(kv_app_benchmark_test test_kv_app_benchmark.cc)
target_link_libraries(kv_app_benchmark_test pslite)

add_executable(kv_app_multi_workers_test test_kv_app_multi_workers.cc)
target_link_libraries(kv_app_multi_workers_test pslite)
